--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,58 @@
 {
-    "name": "phabloraylan/coinpayments-php-sdk",
-    "description": "Biblioteca para se conectar ao https://www.coinpayments.net com o ID do Operador",
-    "type": "library",
-    "require": {
-        "guzzlehttp/guzzle": "^6.3"
+  "name": "phabloraylan/coinpayments-php-sdk",
+  "type": "library",
+  "description": "A PHP wrapper for the CoinPayments.net v1 API.",
+  "homepage": "https://www.coinpayments.net/apidoc-intro",
+  "time": "2019-09-03",
+  "keywords": [
+    "CoinPayments",
+    "cryptocurrency",
+    "crypto",
+    "payment gateway",
+    "payment method",
+    "payment processor",
+    "merchant",
+    "paypal",
+    "bitcoin",
+    "litecoin",
+    "ethereum",
+    "php",
+    "api",
+    "btc",
+    "currency"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Phablo Raylan",
+      "email": "phabloraylan@gmail.com",
+      "homepage": "https://raysoft.com.br",
+      "role": "Developer"
     },
-    "require-dev": {
-        "phpunit/phpunit": "^8.3"
-    },
-    "scripts": {
-        "test": "phpunit"
-    },
-    "autoload": {
-        "psr-4": {
-            "CoinPayments\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "CoinPayments\\": "tests/"
-        }
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Phablo Raylan",
-            "email": "phabloraylan@gmail.com"
-        }
-    ]
+    {
+      "name": "Cole",
+      "email": "cole@coinpayments.net",
+      "homepage": "https://www.coinpayments.net",
+      "role": "Developer"
+    }
+  ],
+  "require": {
+    "php": ">=5.5.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Coinpayments\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Coinpayments\\": "tests/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^8.3"
+  },
+  "scripts": {
+    "test": "phpunit"
+  }
 }
